Add docker-server and docker-server-pytorch (#1602)